add mank statemant modal
